<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Overlay Effects</string>
    <string name="app_name_caps">OVERLAY</string>
    <string name="type_select">Effect</string>
    <string name="type_1">Android</string>
    <string name="type_2">Snow</string>
    <string name="type_3">Christmas Icons</string>
    <string name="type_4">Christmas Lights</string>
    <string name="type_5">New Years</string>
    <string name="type_6">Smileys</string>
    <string name="type_7">Stars</string>
    <string name="type_8">Valentines</string>
    <string name="timing_select">Schedule</string>
    <string name="timing_1">At the top and bottom of every hour</string>
    <string name="timing_2">At the top of each hour</string>
    <string name="timing_3">At the top of every other hour</string>
    <string name="duration_select">Duration</string>
    <string name="duration_1">15 sec</string>
    <string name="duration_2">30 sec</string>
    <string name="duration_3">45 sec</string>
    <string name="duration_4">1 min</string>
    <string name="toggle_turn_on">ON</string>
    <string name="toggle_turn_off">OFF</string>

</resources>