<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="0dip"
    android:paddingRight="0dip" >

    <com.entertailion.android.overlay.MoverView
        android:id="@+id/moverView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="100dip"
        android:paddingLeft="280dip"
        android:paddingRight="280dip"
        android:paddingTop="100dip" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tv"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="85dip" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name_caps"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="24sp" />

            <TableLayout
                android:id="@+id/mainTable"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/title"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:paddingLeft="3dip"
                android:paddingRight="3dip"
                android:shrinkColumns="1"
                android:stretchColumns="*" >

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_select" >
                    </TextView>

                    <Spinner
                        android:id="@+id/spinnerType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timing_select" >
                    </TextView>

                    <Spinner
                        android:id="@+id/spinnerTiming"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_select" >
                    </TextView>

                    <Spinner
                        android:id="@+id/spinnerDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>

            <ToggleButton
                android:id="@+id/onOffButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textOff="@string/toggle_turn_off"
                android:textOn="@string/toggle_turn_on" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>